Fix infoButton flicker bug | circlesize smaller

--- a/frontend/public/widget/co2okWidgetXL.css
+++ b/frontend/public/widget/co2okWidgetXL.css
@@ -25,7 +25,7 @@
   
   #half-circle {
   position:absolute;
-  z-index:2;
+  z-index:0;
   margin-top:-4px;
   }
   
